[project]
name = "dif-blt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "ninja>=1.13.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "timm>=1.0.20",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
